--- a/src/pages/DrawPad/drawpad.css
+++ b/src/pages/DrawPad/drawpad.css
@@ -1,13 +1,9 @@
 .drawing {
-  width: 100%;
-  height: 100vh;
   position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-color: #f0f0f0;
+  overflow: hidden;
+  cursor: crosshair;
 }
 
-.canvas {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
